--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,7 +2,7 @@
 <!-- Header -->
 <div class="row ml-5 fixed-top">
     <div class="col-md-8">
-        <h1 class="mt-4" style="color: white;">Habit Tracker</h1>
+        <h1 class="mt-4" style="color: white;">Habit Tracker via Suraj</h1>
     </div>
     <div class="col-md-2 mt-4">
         <p class="lead float-right mb-3" style="color: white;">Welcome <%= user.name %></p>
