--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
         <div class="card card-body text-center">
-            <h1>Habit Tracker
+            <h1>Your Habit Tracker
                 <br />
                 <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" />
             </h1>
