--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,20 @@
 <!-- Login View -->
 <div class="row mt-5">
+  
+  <div class="card">
+    Have a Nice Day !
+   
+  </div>
+  
+  <a href="https://mythrillfiction.com/" target="_blank"></a>
+  
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
       <h1>Habit Tracker
         <br />
         <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" />
     </h1>
-      <h3 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h3>
+      <h3 class="text-center mb-3"><i class="fa-duotone fa-circles-overlap"></i> Login</h3>
       <%- include ("./partials/messages") %>
       <form action="/users/login" method="POST">
         <div class="form-group">
@@ -16,7 +24,7 @@
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
-        New User? <a href="/users/register">Register</a>
+        New User Click Here? <a href="/users/register">Register</a>
       </p>
     </div>
   </div>
